gcc/testsuite/gdc.test/compilable/extra-files/pkgDIP37_10421/except.d
module pkgDIP37_10421.except;

package void baz() {}
