gcc/testsuite/gdc.test/fail_compilation/protection/subpkg/test3.d
module protection.subpkg.test3;

package(123) void foo3();
